# esp-bsp

esp_eye/: CMakeLists.txt  Kconfig  esp_eye.c  esp_eye_idf4.c  esp_eye_idf5.c  idf_component.yml
esp_eye/include/bsp/: esp-bsp.h  esp_eye.h
